# quality-gate

./: LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: notify-usage.yml
examples/: basic_usage.py
quality_gate/: __init__.py  scorer.py
tests/: test_scorer.py
